--- a/documentation/index.html
+++ b/documentation/index.html
@@ -728,7 +728,7 @@
                         <ul class="mt-15">
                           <li>
                             <a href="https://tailwindcss.com/" target="_blank"
-                              >Tailwind</a
+                              >Tailwind Css</a
                             >
                           </li>
                           <li>
