--- a/placeholder/checkout.html
+++ b/placeholder/checkout.html
@@ -147,7 +147,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-     <nav class="navbar  bg-[var(--secondary-color)] z-50">
+     <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
@@ -392,7 +392,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -457,7 +457,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -522,7 +522,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -587,7 +587,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -652,7 +652,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -717,7 +717,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
