--- a/placeholder/wishlist.html
+++ b/placeholder/wishlist.html
@@ -148,7 +148,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-     <nav class="navbar  bg-[var(--secondary-color)] z-50">
+    <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
@@ -393,7 +393,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -458,7 +458,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -523,7 +523,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -588,7 +588,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -653,7 +653,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -718,7 +718,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -2494,7 +2494,7 @@
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -2605,7 +2605,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -2727,7 +2727,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -2850,7 +2850,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3021,7 +3021,7 @@
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -3120,7 +3120,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -3230,7 +3230,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3340,7 +3340,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3450,7 +3450,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[1px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
