--- a/shopjet/product-single.html
+++ b/shopjet/product-single.html
@@ -147,7 +147,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-    <nav class="navbar  bg-[var(--secondary-color)] z-50">
+    <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
@@ -3534,7 +3534,7 @@
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -3632,7 +3632,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -3741,7 +3741,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3850,7 +3850,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3959,7 +3959,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
