--- a/shopjet/wishlist.html
+++ b/shopjet/wishlist.html
@@ -153,7 +153,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-    <nav class="navbar bg-[var(--secondary-color)] z-50">
+    <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
@@ -2520,7 +2520,7 @@
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -2631,7 +2631,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -2753,7 +2753,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -2876,7 +2876,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3047,7 +3047,7 @@
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -3146,7 +3146,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -3256,7 +3256,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3366,7 +3366,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -3476,7 +3476,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
