--- a/placeholder/index.html
+++ b/placeholder/index.html
@@ -159,7 +159,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-    <nav class="navbar  bg-[var(--secondary-color)] z-50">
+    <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
@@ -181,7 +181,7 @@
             <input
               type="text"
               placeholder="Search for rice, sweets, snacks, Beverages or more..."
-              class="w-full bg-[var(--accent1)] border border-[var(--border2)] rounded-bl-full rounded-tl-full p-3  focus:outline-none text-sm"
+              class="w-full bg-[var(--accent1)] border border-[var(--border2)] rounded-bl-full rounded-tl-full p-3 focus:outline-none text-sm"
             />
             <button
               class="flex justify-center items-center gap-[6px] bg-[var(--primary-color)] rounded-br-full rounded-tr-full border border-[var(--border2)] text-[var(--secondary-color)] text-sm font-normal px-3 rounded-r-md cursor-pointer"
@@ -404,7 +404,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -469,7 +469,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -534,7 +534,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -599,7 +599,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -664,7 +664,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -729,7 +729,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -2822,7 +2822,7 @@
                           >1,49€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,39€</span
                         >
                       </div>
@@ -2920,7 +2920,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,89€</span
                         >
                       </div>
@@ -3029,7 +3029,7 @@
                           >1,49€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,39€</span
                         >
                       </div>
@@ -3138,7 +3138,7 @@
                           >1,49€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,39€</span
                         >
                       </div>
@@ -3247,7 +3247,7 @@
                           >1,49€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,39€</span
                         >
                       </div>
@@ -3495,7 +3495,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,99€</span
                         >
                       </div>
@@ -3582,7 +3582,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >11,69€</span
                         >
                       </div>
@@ -3669,7 +3669,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,99€</span
                         >
                       </div>
@@ -3760,7 +3760,7 @@
                           >7,79€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,62€</span
                         >
                       </div>
@@ -3856,7 +3856,7 @@
                           >1,49€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,39€</span
                         >
                       </div>
@@ -4121,7 +4121,7 @@
                           >16,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >13,59€</span
                         >
                       </div>
@@ -4219,7 +4219,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >1,29€</span
                         >
                       </div>
@@ -4317,7 +4317,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -4415,7 +4415,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,99€</span
                         >
                       </div>
@@ -4513,7 +4513,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,99€</span
                         >
                       </div>
@@ -4895,7 +4895,7 @@
                           >8,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,69€</span
                         >
                       </div>
@@ -4993,7 +4993,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >2,39€</span
                         >
                       </div>
@@ -5102,7 +5102,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -5211,7 +5211,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -5320,7 +5320,7 @@
                           >4,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -5590,7 +5590,7 @@
                           >3,39€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >2,99€</span
                         >
                       </div>
@@ -5699,7 +5699,7 @@
                           >6,99€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >6,09€</span
                         >
                       </div>
@@ -5797,7 +5797,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,69€</span
                         >
                       </div>
@@ -5906,7 +5906,7 @@
                           >4,59€</span
                         >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,89€</span
                         >
                       </div>
@@ -6004,7 +6004,7 @@
                         class="price-box flex items-center gap-2 font-secondary"
                       >
                         <span
-                          class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                          class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                           >3,69€</span
                         >
                       </div>
