--- a/placeholder/product.html
+++ b/placeholder/product.html
@@ -148,7 +148,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-     <nav class="navbar  bg-[var(--secondary-color)] z-50">
+    <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
@@ -393,7 +393,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -458,7 +458,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -523,7 +523,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -588,7 +588,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -653,7 +653,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -718,7 +718,7 @@
                 </svg>
               </button>
               <img
-                src="./assets/img/home/small-p.png"
+                src="./assets/img/home/frozen1.webp"
                 alt="Chobani Complete Vanilla Greek Yogurt"
                 class="w-[40px] h-[40px] object-cover rounded-md"
               />
@@ -3048,7 +3048,7 @@
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3148,7 +3148,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,89€</span
                           >
                         </div>
@@ -3259,7 +3259,7 @@
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3370,7 +3370,7 @@
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3481,7 +3481,7 @@
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
@@ -3592,7 +3592,7 @@
                             >8,99€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >6,69€</span
                           >
                         </div>
@@ -3692,7 +3692,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >2,39€</span
                           >
                         </div>
@@ -3803,7 +3803,7 @@
                             >4,99€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >3,89€</span
                           >
                         </div>
@@ -3914,7 +3914,7 @@
                             >4,59€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >3,89€</span
                           >
                         </div>
@@ -4025,7 +4025,7 @@
                             >16,99€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >13,59€</span
                           >
                         </div>
@@ -4125,7 +4125,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,29€</span
                           >
                         </div>
@@ -4225,7 +4225,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >2,39€</span
                           >
                         </div>
@@ -4336,7 +4336,7 @@
                             >4,99€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >3,89€</span
                           >
                         </div>
@@ -4427,7 +4427,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >3,99€</span
                           >
                         </div>
@@ -4516,7 +4516,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >11,69€</span
                           >
                         </div>
@@ -4605,7 +4605,7 @@
                           class="price-box flex items-center gap-2 font-secondary"
                         >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >6,99€</span
                           >
                         </div>
@@ -4698,7 +4698,7 @@
                             >7,79€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >6,62€</span
                           >
                         </div>
@@ -4796,7 +4796,7 @@
                             >1,49€</span
                           >
                           <span
-                            class="current-price text-[16px] font-semibold text-[var(--primary-color)]"
+                            class="current-price text-[18px] font-semibold text-[var(--primary-color)]"
                             >1,39€</span
                           >
                         </div>
