--- a/shopjet/checkout.html
+++ b/shopjet/checkout.html
@@ -153,7 +153,7 @@
     <!-- Top Bar End -->
 
     <!-- Navbar -->
-    <nav class="navbar  bg-[var(--secondary-color)] z-50">
+    <nav class="navbar sticky top-0 left-0 bg-[var(--secondary-color)] z-50">
       <div class="header custom-container">
         <div class="flex justify-between items-center py-3">
           <!-- Mobile Menu Button -->
